argocd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitch-sub-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - twitch-sub-api.devopswithbrian.com
    secretName: twitch-sub-api-tls
  rules:
  - host: twitch-sub-api.devopswithbrian.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: twitch-sub-api
            port:
              number: 8000
